--- a/frontend/src/app/offers/new-offer/new-offer.component.html
+++ b/frontend/src/app/offers/new-offer/new-offer.component.html
@@ -106,8 +106,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Bugatti'" id="Bugatti">
                     <label for="model">Model: </label>
-                    <select name="model" #bugatti ngModel (change)="onSelectedModelHandler(bugatti.value)"
-                        required>
+                    <select name="model" #bugatti ngModel (change)="onSelectedModelHandler(bugatti.value)" required>
                         <option selected value="Divo">Divo</option>
                         <option value="Chiron">Chiron</option>
                         <option value="Veyron">Veyron</option>
@@ -118,8 +117,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Citroen'" id="Citroen">
                     <label for="model">Model: </label>
-                    <select name="model" #citroen ngModel (change)="onSelectedModelHandler(citroen.value)"
-                        required>
+                    <select name="model" #citroen ngModel (change)="onSelectedModelHandler(citroen.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Berlingo">Berlingo</option>
                         <option value="C1">C1</option>
@@ -136,8 +134,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Dodge'" id="Dodge">
                     <label for="model">Model: </label>
-                    <select name="model" #dodge ngModel (change)="onSelectedModelHandler(dodge.value)"
-                        required>
+                    <select name="model" #dodge ngModel (change)="onSelectedModelHandler(dodge.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Challenger">Challenger</option>
                         <option value="Charger">Charger</option>
@@ -157,8 +154,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Ferrari'" id="Ferrari">
                     <label for="model">Model: </label>
-                    <select name="model" #ferrari ngModel (change)="onSelectedModelHandler(ferrari.value)"
-                        required>
+                    <select name="model" #ferrari ngModel (change)="onSelectedModelHandler(ferrari.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="F40">F40</option>
                         <option value="F355">F355</option>
@@ -187,8 +183,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Honda'" id="Honda">
                     <label for="model">Model: </label>
-                    <select name="model" #honda ngModel (change)="onSelectedModelHandler(honda.value)"
-                        required>
+                    <select name="model" #honda ngModel (change)="onSelectedModelHandler(honda.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="CRV">CRV</option>
                         <option value="Accord">Accord</option>
@@ -231,8 +226,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Lamborghini'" id="Lamborghini">
                     <label for="model">Model: </label>
-                    <select name="model" #lamborghini ngModel
-                        (change)="onSelectedModelHandler(lamborghini.value)">
+                    <select name="model" #lamborghini ngModel (change)="onSelectedModelHandler(lamborghini.value)">
                         <option selected value="">Choose model</option>
                         <option value="Huracan">Huracan</option>
                         <option value="Aventador">Aventador</option>
@@ -247,8 +241,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Mazda'" id="Mazda">
                     <label for="model">Model: </label>
-                    <select name="model" #mazda ngModel (change)="onSelectedModelHandler(mazda.value)"
-                        required>
+                    <select name="model" #mazda ngModel (change)="onSelectedModelHandler(mazda.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="RX7">RX7</option>
                         <option value="RX8">RX8</option>
@@ -265,8 +258,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Mercedes-Benz'" id="Mercedes-Benz">
                     <label for="model">Model: </label>
-                    <select name="model" #mercedes ngModel (change)="onSelectedModelHandler(mercedes.value)"
-                        required>
+                    <select name="model" #mercedes ngModel (change)="onSelectedModelHandler(mercedes.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="A-Class">A-Class</option>
                         <option value="B-Class">B-Class</option>
@@ -294,8 +286,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Mitsubishi'" id="Mitsubishi">
                     <label for="model">Model: </label>
-                    <select name="model" #mitsubishi ngModel
-                        (change)="onSelectedModelHandler(mitsubishi.value)">
+                    <select name="model" #mitsubishi ngModel (change)="onSelectedModelHandler(mitsubishi.value)">
                         <option selected value="">Choose model</option>
                         <option value="Lancer">Lancer</option>
                         <option value="Galant">Galant</option>
@@ -313,8 +304,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Nissan'" id="Nissan">
                     <label for="model">Model: </label>
-                    <select name="model" #nissan ngModel (change)="onSelectedModelHandler(nissan.value)"
-                        required>
+                    <select name="model" #nissan ngModel (change)="onSelectedModelHandler(nissan.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Qashqai">Qashqai</option>
                         <option value="Navara">Navara</option>
@@ -347,8 +337,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Peugeot'" id="Peugeot">
                     <label for="model">Model: </label>
-                    <select name="model" #peugeot ngModel (change)="onSelectedModelHandler(peugeot.value)"
-                        required>
+                    <select name="model" #peugeot ngModel (change)="onSelectedModelHandler(peugeot.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="208">208</option>
                         <option value="308">308</option>
@@ -366,8 +355,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Porsche'" id="Porsche">
                     <label for="model">Model: </label>
-                    <select name="model" #porsche ngModel (change)="onSelectedModelHandler(porsche.value)"
-                        required>
+                    <select name="model" #porsche ngModel (change)="onSelectedModelHandler(porsche.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="911">911</option>
                         <option value="Panamera">Panamera</option>
@@ -383,8 +371,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Renault'" id="Renault">
                     <label for="model">Model: </label>
-                    <select name="model" #renault ngModel (change)="onSelectedModelHandler(renault.value)"
-                        required>
+                    <select name="model" #renault ngModel (change)="onSelectedModelHandler(renault.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Talisman">Talisman</option>
                         <option value="Initiale">Initiale</option>
@@ -418,8 +405,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Skoda'" id="Skoda">
                     <label for="model">Model: </label>
-                    <select name="model" #skoda ngModel (change)="onSelectedModelHandler(skoda.value)"
-                        required>
+                    <select name="model" #skoda ngModel (change)="onSelectedModelHandler(skoda.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Kodiaq">Kodiaq</option>
                         <option value="Enyaq">Enyaq</option>
@@ -436,8 +422,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Suzuki'" id="Suzuki">
                     <label for="model">Model: </label>
-                    <select name="model" #suzuki ngModel (change)="onSelectedModelHandler(suzuki.value)"
-                        required>
+                    <select name="model" #suzuki ngModel (change)="onSelectedModelHandler(suzuki.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Vitara">Vitara</option>
                         <option value="Swift">Swift</option>
@@ -451,8 +436,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Tesla'" id="Tesla">
                     <label for="model">Model: </label>
-                    <select name="model" #tesla ngModel (change)="onSelectedModelHandler(tesla.value)"
-                        required>
+                    <select name="model" #tesla ngModel (change)="onSelectedModelHandler(tesla.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Model 3">Model 3</option>
                         <option value="Model S">Model S</option>
@@ -467,8 +451,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Toyota'" id="Toyota">
                     <label for="model">Model: </label>
-                    <select name="model" #toyota ngModel (change)="onSelectedModelHandler(toyota.value)"
-                        required>
+                    <select name="model" #toyota ngModel (change)="onSelectedModelHandler(toyota.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="Yaris">Yaris</option>
                         <option value="Rav4">Rav4</option>
@@ -485,8 +468,7 @@
                 </div>
                 <div *ngIf="brand.value == 'Trabant'" id="Trabant">
                     <label for="model">Model: </label>
-                    <select name="model" #trabant ngModel (change)="onSelectedModelHandler(trabant.value)"
-                        required>
+                    <select name="model" #trabant ngModel (change)="onSelectedModelHandler(trabant.value)" required>
                         <option selected value="">Choose model</option>
                         <option value="600">600</option>
                         <option value="601">601</option>
@@ -517,21 +499,21 @@
                     </ng-container>
                 </div>
             </div>
-            <label for="price">Price: </label>
-            <input type="number" name="price" #price="ngModel" ngModel required min="0"><span> lv.</span>
+            <label for="price">Price (in lv.): </label>
+            <input type="number" name="price" #price="ngModel" ngModel required min="0">
             <ng-container *ngIf="price.touched">
                 <p *ngIf="price.errors?.['required']">
                     Price is required!
                 </p>
                 <p *ngIf="price.errors?.['min']">
-                    Price cannot be negative!!
+                    Price cannot be negative!
                 </p>
             </ng-container>
             <label for="year">Year: </label>
             <input type="number" name="year" #year="ngModel" ngModel required min="1970" max="2025">
             <ng-container *ngIf="year.touched">
                 <p *ngIf="year.errors?.['required']">
-                    Year is required
+                    Year is required!
                 </p>
                 <p *ngIf="year.errors?.['min']">
                     Year cannot be lesser than 1970!
@@ -541,8 +523,8 @@
                 </p>
             </ng-container>
             <label for="description">Description: </label>
-            <textarea rows="5" cols="51" name="description" #description="ngModel" ngModel required
-                minlength="50" maxlength="255"></textarea>
+            <input type="text" name="description" #description="ngModel" ngModel required minlength="50"
+                maxlength="255">
             <ng-container *ngIf="description.touched">
                 <p *ngIf="description.errors?.['required']">
                     Description is required!
@@ -566,7 +548,7 @@
                     Phone number is required!
                 </p>
             </ng-container>
-            <button class="submit" [disabled]="createOffer.invalid || brand.value == ''">Create your offer</button>
+            <input type="submit" [disabled]="createOffer.invalid || brand.value == ''" value="Create your offer">
         </form>
     </div>
 </main>
