--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,10 @@
 body {
     margin: 0;
 }
+
+textarea:focus,
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=number]:focus {
+    background-color: rgb(216, 245, 255);
+}
