--- a/frontend/src/app/offers/new-offer/new-offer.component.html
+++ b/frontend/src/app/offers/new-offer/new-offer.component.html
@@ -1,4 +1,6 @@
 <main>
+
+    <a id="back" routerLink="/data/offers">Go back</a>
     <div class="new-offer-box">
         <h1>Create new offer</h1>
         <form #createOffer="ngForm" (ngSubmit)="createOfferHandler(createOffer)">
